@@ -988,6 +988,7 @@ client_encryption_options:
     # truststore: conf/.truststore
     # truststore_password: cassandra
     # More advanced defaults below:
+    # require_endpoint_verification: false
     # protocol: TLS
     # store_type: JKS
     # cipher_suites: [TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA,TLS_DHE_RSA_WITH_AES_128_CBC_SHA,TLS_DHE_RSA_WITH_AES_256_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA]
